// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table pago {
  id_pago int [primary key, increment]
  monto decimal(12, 2) [not null]
  id_compra int [not null, unique]
}

Table compra {
  id_compra int [primary key, increment]
  direccion varchar(100)
}

Table detalle_compra {
  id_detalle int [primary key, increment]
  id_compra int [not null]
  id_producto int [not null]
  cantidad int [not null]
}

Table producto {
  id_producto int [primary key, increment]
  nombre varchar(50) [not null]
  precio decimal(10, 2) [not null]
  stock int [not null]
}

Ref: pago.id_compra - compra.id_compra
Ref: compra.id_compra < detalle_compra.id_compra
Ref: detalle_compra.id_producto > producto.id_producto